build_webfs/log/idf_py_stdout_output_2240
Command: ninja all
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/webfs_storage.c.obj
[2/11] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\s\coding\ESPIDF\webFS_s3\build_webfs\bootloader && C:\Users\s\.espressif\python_env\idf6.0_py3.11_env\Scripts\python.exe C:/esp/v6.0.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/s/coding/ESPIDF/webFS_s3/build_webfs/bootloader/bootloader.bin"
Bootloader binary size 0x57e0 bytes. 0x2820 bytes (31%) free.
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/webfs_server.c.obj
[4/11] No install step for 'bootloader'
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/webfs_wifi.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/webfs_wifi.c.obj 
ccache C:\Users\s\.espressif\tools\xtensa-esp-elf\esp-15.2.0_20251204\xtensa-esp-elf\bin\xtensa-esp32s3-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v6.0.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/s/coding/ESPIDF/webFS_s3/build_webfs/config -IC:/Users/s/coding/ESPIDF/webFS_s3/main -IC:/esp/v6.0.1/esp-idf/components/esp_libc/platform_include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include -IC:/esp/v6.0.1/esp-idf/components/freertos/config/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/config/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp/v6.0.1/esp-idf/components/freertos/esp_additions/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include/soc -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/ldo/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/etm/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/modem/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/port/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -IC:/esp/v6.0.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/heap/include -IC:/esp/v6.0.1/esp-idf/components/heap/tlsf -IC:/esp/v6.0.1/esp-idf/components/log/include -IC:/esp/v6.0.1/esp-idf/components/soc/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32s3 -IC:/esp/v6.0.1/esp-idf/components/soc/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/soc/esp32s3/register -IC:/esp/v6.0.1/esp-idf/components/hal/platform_port/include -IC:/esp/v6.0.1/esp-idf/components/hal/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/hal/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -IC:/esp/v6.0.1/esp-idf/components/esp_rom/esp32s3 -IC:/esp/v6.0.1/esp-idf/components/esp_common/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/include -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/soc -IC:/esp/v6.0.1/esp-idf/components/esp_system/port/include/private -IC:/esp/v6.0.1/esp-idf/components/esp_stdio/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/include -IC:/esp/v6.0.1/esp-idf/components/xtensa/deprecated_include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_gpio/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_usb/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_pmu/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_ana_conv/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_dma/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include -IC:/esp/v6.0.1/esp-idf/components/lwip/include/apps -IC:/esp/v6.0.1/esp-idf/components/lwip/lwip/src/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/freertos/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/esp/v6.0.1/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/esp/v6.0.1/esp-idf/components/esp_http_server/include -IC:/esp/v6.0.1/esp-idf/components/http_parser -IC:/esp/v6.0.1/esp-idf/components/esp_event/include -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/include -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/include/local -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/wifi_apps/include -IC:/esp/v6.0.1/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp/v6.0.1/esp-idf/components/esp_phy/include -IC:/esp/v6.0.1/esp-idf/components/esp_phy/esp32s3/include -IC:/esp/v6.0.1/esp-idf/components/esp_netif/include -IC:/esp/v6.0.1/esp-idf/components/nvs_flash/include -IC:/esp/v6.0.1/esp-idf/components/esp_partition/include -IC:/esp/v6.0.1/esp-idf/components/esp_blockdev/include -IC:/Users/s/coding/ESPIDF/webFS_s3/managed_components/joltwallet__littlefs/include -IC:/esp/v6.0.1/esp-idf/components/sdmmc/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_sd/include -IC:/esp/v6.0.1/esp-idf/components/esp_hal_sd/esp32s3/include @"C:/Users/s/coding/ESPIDF/webFS_s3/build_webfs/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/s/coding/ESPIDF/webFS_s3=. -fmacro-prefix-map=C:/esp/v6.0.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/webfs_wifi.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\webfs_wifi.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/webfs_wifi.c.obj -c C:/Users/s/coding/ESPIDF/webFS_s3/main/webfs_wifi.c
In file included from C:/Users/s/coding/ESPIDF/webFS_s3/main/webfs_wifi.h:3,
                 from C:/Users/s/coding/ESPIDF/webFS_s3/main/webfs_wifi.c:1:
C:/Users/s/coding/ESPIDF/webFS_s3/main/webfs_wifi.c: In function 'webfs_wifi_sta_start':
C:/Users/s/coding/ESPIDF/webFS_s3/main/webfs_wifi.c:69:57: error: 'WIFI_BW_HT20' undeclared (first use in this function); did you mean 'WIFI_BW20'?
   69 |     ESP_ERROR_CHECK(esp_wifi_set_bandwidth(WIFI_IF_STA, WIFI_BW_HT20));
      |                                                         ^~~~~~~~~~~~
C:/esp/v6.0.1/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
C:/Users/s/coding/ESPIDF/webFS_s3/main/webfs_wifi.c:69:57: note: each undeclared identifier is reported only once for each function it appears in
   69 |     ESP_ERROR_CHECK(esp_wifi_set_bandwidth(WIFI_IF_STA, WIFI_BW_HT20));
      |                                                         ^~~~~~~~~~~~
C:/esp/v6.0.1/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
[6/11] Completed 'bootloader'
ninja: build stopped: subcommand failed.
